// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should handle click 1`] = `
<DocumentFragment>
  <div>
    <button
      class="css-116zvw2"
      data-testid="Card"
      type="button"
    >
      Test
      <div
        class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Card > should render 1`] = `
<DocumentFragment>
  <div>
    <button
      class="css-cqna23"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Card > should render with custom options 1`] = `
<DocumentFragment>
  <div>
    <button
      class="css-116zvw2"
      data-testid="Card"
      type="button"
    >
      Test
      <div
        class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex w-4 justify-center overflow-hidden"
            >
              <div
                class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="ellipsis-vertical"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="16.994"
                      r="2.006"
                    />
                    <circle
                      cx="10"
                      cy="3"
                      r="2"
                    />
                    <circle
                      cx="10"
                      cy="10"
                      r="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </span>
          <div
            class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl css-13dpsn2"
            data-testid="dropdown__content"
            style="opacity: 1; height: -30px; overflow-y: scroll;"
          >
            <ul
              data-testid="dropdown__options"
            >
              <li
                class="css-x2cq94"
                data-testid="dropdown__option--0"
                tabindex="0"
              >
                <span>
                  Action 1
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
